ANCR-11 review fix problem (Inheritance, notNull,...)