@@ -1,12 +1,13 @@
 package be.labil.anacarde.application.service;
 
 import be.labil.anacarde.application.exception.ResourceNotFoundException;
-import be.labil.anacarde.domain.dto.DocumentDto;
-import be.labil.anacarde.domain.mapper.DocumentMapper;
-import be.labil.anacarde.domain.model.Document;
-import be.labil.anacarde.infrastructure.persistence.DocumentRepository;
+import be.labil.anacarde.domain.dto.QualityDocumentDto;
+import be.labil.anacarde.domain.mapper.QualityDocumentMapper;
+import be.labil.anacarde.domain.model.QualityDocument;
+import be.labil.anacarde.infrastructure.persistence.QualityCertificationRepository;
+import be.labil.anacarde.infrastructure.persistence.QualityDocumentRepository;
+import be.labil.anacarde.infrastructure.persistence.UserRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -14,48 +15,57 @@ import org.springframework.transaction.annotation.Transactional;
 @Service
 @Transactional
 @AllArgsConstructor
-public class DocumentServiceImpl implements DocumentService {
+public class QualityDocumentServiceImpl implements QualityDocumentService {
 
-	private final DocumentRepository documentRepository;
-	private final DocumentMapper documentMapper;
+	private final QualityDocumentRepository qualityDocumentRepository;
+	private final QualityDocumentMapper qualityDocumentMapper;
+	private final UserRepository userRepository;
+
+	private final QualityCertificationRepository qualityCertificationRepository;
 
 	@Override
-	public DocumentDto createDocument(DocumentDto documentDto) {
-		Document document = documentMapper.toEntity(documentDto);
-		Document saved = documentRepository.save(document);
-		return documentMapper.toDto(saved);
+	public QualityDocumentDto createQualityDocument(QualityDocumentDto qualityDocumentDto) {
+		if (!qualityCertificationRepository.existsById(qualityDocumentDto.getQualityCertificationId())) {
+			throw new ResourceNotFoundException("Certification de qualité non trouvée");
+		}
+		if (!userRepository.existsById(qualityDocumentDto.getUserId())) {
+			throw new ResourceNotFoundException("Utilisateur associé non trouvé");
+		}
+		QualityDocument qualityDocument = qualityDocumentMapper.toEntity(qualityDocumentDto);
+		QualityDocument saved = qualityDocumentRepository.save(qualityDocument);
+		return qualityDocumentMapper.toDto(saved);
 	}
 
 	@Override
 	@Transactional(readOnly = true)
-	public DocumentDto getDocumentById(Integer id) {
-		Document document = documentRepository.findById(id)
+	public QualityDocumentDto getQualityDocumentById(Integer id) {
+		QualityDocument qualityDocument = qualityDocumentRepository.findById(id)
 				.orElseThrow(() -> new ResourceNotFoundException("Document de qualité non trouvé"));
-		return documentMapper.toDto(document);
+		return qualityDocumentMapper.toDto(qualityDocument);
 	}
 
 	@Override
 	@Transactional(readOnly = true)
-	public List<DocumentDto> listDocuments() {
-		return documentRepository.findAll().stream().map(documentMapper::toDto)
-				.collect(Collectors.toList());
+	public List<QualityDocumentDto> listQualityDocuments() {
+		return qualityDocumentRepository.findAll().stream().map(qualityDocumentMapper::toDto).toList();
 	}
 
 	@Override
-	public DocumentDto updateDocument(Integer id, DocumentDto documentDto) {
-		Document existingDocument = documentRepository.findById(id)
+	public QualityDocumentDto updateQualityDocument(Integer id, QualityDocumentDto qualityDocumentDto) {
+		QualityDocument existingQualityDocument = qualityDocumentRepository.findById(id)
 				.orElseThrow(() -> new ResourceNotFoundException("Document de qualité non trouvé"));
 
-		Document updatedDocument = documentMapper.partialUpdate(documentDto, existingDocument);
-		Document saved = documentRepository.save(updatedDocument);
-		return documentMapper.toDto(saved);
+		QualityDocument updatedQualityDocument = qualityDocumentMapper.partialUpdate(qualityDocumentDto,
+				existingQualityDocument);
+		QualityDocument saved = qualityDocumentRepository.save(updatedQualityDocument);
+		return qualityDocumentMapper.toDto(saved);
 	}
 
 	@Override
-	public void deleteDocument(Integer id) {
-		if (!documentRepository.existsById(id)) {
+	public void deleteQualityDocument(Integer id) {
+		if (!qualityDocumentRepository.existsById(id)) {
 			throw new ResourceNotFoundException("Document de qualité non trouvé");
 		}
-		documentRepository.deleteById(id);
+		qualityDocumentRepository.deleteById(id);
 	}
 }
